<resources>
    <string name="app_name">AccountManageDemo</string>
    <string name="forget">忘记密码</string>
    <string name="et_username">请输入注册账号</string>
    <string name="et_email">请输入绑定邮箱</string>
    <string name="send_email">点击发送邮件</string>
    <string name="register">注册</string>
    <string name="login">登录</string>
    <string name="remember">记住密码</string>
    <string name="please_password">请输入密码</string>
    <string name="password_">密码：</string>
    <string name="please_username">请输入用户名</string>
    <string name="username_">账号：</string>
    <string name="db_manager">数据库管理</string>
    <string name="add">增加</string>
    <string name="delete">删除</string>
    <string name="modify">修改</string>
    <string name="query">查询</string>
    <string name="username">账号</string>
    <string name="email">邮箱</string>
    <string name="sex">性别</string>
    <string name="hobby">爱好</string>
    <string name="birthday">生日</string>
    <string name="_1_10">输入1-10个字母</string>
    <string name="email_">邮箱：</string>
    <string name="please_email">请输入邮箱</string>
    <string name="sex_">性别：</string>
    <string name="choose_sex">请选择性别</string>
    <string name="hobby_">爱好：</string>
    <string name="choose_hobby">请选择爱好</string>
    <string name="birthday_">出生日期：</string>
    <string name="choose_birthday">请选择出生日期</string>
    <string name="submit">提交</string>
    <string name="reset">重置</string>
    <string name="username__">请输入账号:</string>
    <string name="password__">请输入密码:</string>
    <string name="loading">正在登录...</string>
    <string name="please_selection">请输入查询的属性:</string>
    <string name="please_content">请输入查询的内容:</string>
    <string name="username___">请输入修改的账号:</string>
    <string name="selection__">请输入修改的属性:</string>
    <string name="content__">请输入修改的内容:</string>
</resources>
